# QBot-Next

./: Cargo.toml  Dockerfile  README.md
src/: dotenv_tools.rs  handler.rs  main.rs  networking.rs  qsegment_constructor.rs
