[package]
name = "QBot_Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
sea-orm = "0.10"
sqlx = { version = "0.6", features = ["runtime-actix-native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
once_cell = "1.15"
actix-rt = "2.10.0"
[target.x86_64-unknown-linux-gnu]